--- a/template/form.html
+++ b/template/form.html
@@ -5,36 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form</title>
-    <link rel="stylesheet" href="form.css">
+    <link rel="stylesheet" href="/css/form.css">
 </head>
 <body>
 <div class="container">
         <div class="form">
-        <form action="">
+        <form method="POST" action="/data">
             <div class="form-header">
               <h1>Cadastre-se</h1>
             </div>
             <div class="PersonalData">
                 <div class="input-box">
                   <label for="FullNameRequest">Nome Completo</label>
-                  <input type="text" placeholder="Digite o seu nome" required>
+                  <input type="text" name="nome" placeholder="Digite o seu nome" >
                 </div>
                 <div class="input-box">
                   <label for="DataDeNascimento">Nascimento</label>
-                  <input type="date" placeholder="XX/XX/XXXX" required>
+                  <input type="date" name="nascimento" placeholder="XX/XX/XXXX" >
                 </div>
                 <div class="input-box">
                   <label for="EmailRequest" >E-mail</label>
-                  <input type="email" placeholder="Email para contato" required>
+                  <input type="email" name="email" placeholder="Email para contato" >
                 </div>
                 <div class="input-box">
                   <label for="cpfRequest">CEP</label>
-                  <input type="number" placeholder="xxxxx-xxx" required>
+                  <input type="number" placeholder="xxxxx-xxx" >
                 </div>
                 
                 <div class="input-box">
                   <label for="CelularRequest">Celular</label>
-                  <input type="number" placeholder="(xx) xxxxx-xxxx" required>
+                  <input type="number" placeholder="(xx) xxxxx-xxxx" >
                 </div>
                 <div class="input-box">
                   <label for="SiteRequest">Link</label>
@@ -43,7 +43,7 @@
                 
             </div>
                 <div class="form-check">
-                   <input type="checkbox" required>
+                   <input type="checkbox" >
                    <label for="ValidationOfPersonaldata">Valido que os dados apresentados estão corretos</label>
                 </div>
                 
@@ -55,6 +55,6 @@
          <div class="conect"></div>
    
 </div>
-   
+
 </body>
 </html>
